--- a/ISMI project.ipynb
+++ b/ISMI project.ipynb
@@ -95,6 +95,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-18T09:55:02.382066Z",
+     "start_time": "2023-04-18T09:55:02.368057Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patientid</th>\n",
+       "      <th>seriesuid</th>\n",
+       "      <th>noduleid</th>\n",
+       "      <th>coordx</th>\n",
+       "      <th>coordy</th>\n",
+       "      <th>coordz</th>\n",
+       "      <th>diameter_mm</th>\n",
+       "      <th>noduletype</th>\n",
+       "      <th>malignancy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>LIDC-IDRI-0161</td>\n",
+       "      <td>1.3.6.1.4.1.14519.5.2.1.6279.6001.189483585244...</td>\n",
+       "      <td>2.25.10002343616245235850618787121539297713552...</td>\n",
+       "      <td>90.351712</td>\n",
+       "      <td>-71.702854</td>\n",
+       "      <td>-263.880682</td>\n",
+       "      <td>9.352996</td>\n",
+       "      <td>Solid</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          patientid                                          seriesuid  \\\n",
+       "136  LIDC-IDRI-0161  1.3.6.1.4.1.14519.5.2.1.6279.6001.189483585244...   \n",
+       "\n",
+       "                                              noduleid     coordx     coordy  \\\n",
+       "136  2.25.10002343616245235850618787121539297713552...  90.351712 -71.702854   \n",
+       "\n",
+       "         coordz  diameter_mm noduletype  malignancy  \n",
+       "136 -263.880682     9.352996      Solid           0  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_labels[image_labels['noduleid'] == '2.25.10002343616245235850618787121539297713552472755036270141148']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
@@ -115,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:34:58.203954Z",
-     "start_time": "2023-04-18T09:34:58.184447Z"
+     "end_time": "2023-04-18T09:58:40.154797Z",
+     "start_time": "2023-04-18T09:58:40.122818Z"
     }
    },
    "outputs": [
@@ -127,10 +206,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image (0000019A2440FD30)\n",
+      "Image (0000019A2440D300)\n",
       "  RTTI typeinfo:   class itk::Image<short,3>\n",
       "  Reference Count: 1\n",
-      "  Modified Time: 5138\n",
+      "  Modified Time: 5864\n",
       "  Debug: Off\n",
       "  Object Name: \n",
       "  Observers: \n",
@@ -140,8 +219,8 @@
       "  Release Data: Off\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
-      "  PipelineMTime: 5108\n",
-      "  UpdateMTime: 5134\n",
+      "  PipelineMTime: 5834\n",
+      "  UpdateMTime: 5860\n",
       "  RealTimeStamp: 0 seconds \n",
       "  LargestPossibleRegion: \n",
       "    Dimension: 3\n",
@@ -178,15 +257,15 @@
       "0 0 1\n",
       "\n",
       "  PixelContainer: \n",
-      "    ImportImageContainer (0000019A18670DA0)\n",
+      "    ImportImageContainer (0000019A1866FFA0)\n",
       "      RTTI typeinfo:   class itk::ImportImageContainer<unsigned __int64,short>\n",
       "      Reference Count: 1\n",
-      "      Modified Time: 5131\n",
+      "      Modified Time: 5857\n",
       "      Debug: Off\n",
       "      Object Name: \n",
       "      Observers: \n",
       "        none\n",
-      "      Pointer: 0000019A2E177040\n",
+      "      Pointer: 0000019A2E8BE040\n",
       "      Container manages memory: true\n",
       "      Size: 1048576\n",
       "      Capacity: 1048576\n",
@@ -201,11 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:34:59.553135Z",
-     "start_time": "2023-04-18T09:34:59.114950Z"
+     "end_time": "2023-04-18T09:58:41.166337Z",
+     "start_time": "2023-04-18T09:58:40.740947Z"
     }
    },
    "outputs": [
