--- a/ISMI project.ipynb
+++ b/ISMI project.ipynb
@@ -22,6 +22,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_images = os.listdir('train_set/images')\n",
+    "train_segmentation_labels = os.listdir('train_set/labels')\n",
+    "train_classification_labels = pd.read_csv('luna23-ismi-train-set.csv')\n",
+    "test_images = os.listdir('test_set/images')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
@@ -89,8 +101,8 @@
     }
    ],
    "source": [
-    "image_labels = pd.read_csv('luna23-ismi-train-set.csv')\n",
-    "image_labels['noduletype'].value_counts().to_frame().style.background_gradient()"
+    "train_classification_labels = pd.read_csv('luna23-ismi-train-set.csv')\n",
+    "train_classification_labels['noduletype'].value_counts().to_frame().style.background_gradient()"
    ]
   },
   {
@@ -169,7 +181,7 @@
     }
    ],
    "source": [
-    "image_labels[image_labels['noduleid'] == '2.25.10002343616245235850618787121539297713552472755036270141148']"
+    "train_classification_labels[image_labels['noduleid'] == '2.25.10002343616245235850618787121539297713552472755036270141148']"
    ]
   },
   {
@@ -333,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
@@ -376,7 +388,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "window_display": true
   }
  },
  "nbformat": 4,
