--- a/ISMI project.ipynb
+++ b/ISMI project.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:15:08.011376Z",
-     "start_time": "2023-04-18T09:15:07.854606Z"
+     "end_time": "2023-05-12T14:17:01.349794Z",
+     "start_time": "2023-05-12T14:17:00.018178Z"
     }
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import torch\n",
     "import pandas as pd\n",
@@ -22,23 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-12T14:17:01.411111Z",
+     "start_time": "2023-05-12T14:17:01.383644Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "train_images = os.listdir('train_set/images')\n",
-    "train_segmentation_labels = os.listdir('train_set/labels')\n",
+    "train_images = os.listdir('data/train_set/images')\n",
+    "train_segmentation_labels = os.listdir('data/train_set/labels')\n",
     "train_classification_labels = pd.read_csv('luna23-ismi-train-set.csv')\n",
-    "test_images = os.listdir('test_set/images')"
+    "test_images = os.listdir('data/test_set/images')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:15:09.823380Z",
-     "start_time": "2023-04-18T09:15:09.797339Z"
+     "end_time": "2023-05-12T14:17:25.113821Z",
+     "start_time": "2023-05-12T14:17:25.033029Z"
     },
     "scrolled": true
    },
@@ -47,55 +53,55 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_b4bde_row0_col0 {\n",
+       "#T_746f9_row0_col0 {\n",
        "  background-color: #023858;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_b4bde_row1_col0 {\n",
+       "#T_746f9_row1_col0 {\n",
        "  background-color: #c0c9e2;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b4bde_row2_col0 {\n",
+       "#T_746f9_row2_col0 {\n",
        "  background-color: #f4eef6;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b4bde_row3_col0 {\n",
+       "#T_746f9_row3_col0 {\n",
        "  background-color: #fff7fb;\n",
        "  color: #000000;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_b4bde\">\n",
+       "<table id=\"T_746f9\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_b4bde_level0_col0\" class=\"col_heading level0 col0\" >noduletype</th>\n",
+       "      <th id=\"T_746f9_level0_col0\" class=\"col_heading level0 col0\" >noduletype</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_b4bde_level0_row0\" class=\"row_heading level0 row0\" >Solid</th>\n",
-       "      <td id=\"T_b4bde_row0_col0\" class=\"data row0 col0\" >466</td>\n",
+       "      <th id=\"T_746f9_level0_row0\" class=\"row_heading level0 row0\" >Solid</th>\n",
+       "      <td id=\"T_746f9_row0_col0\" class=\"data row0 col0\" >466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b4bde_level0_row1\" class=\"row_heading level0 row1\" >Calcified</th>\n",
-       "      <td id=\"T_b4bde_row1_col0\" class=\"data row1 col0\" >152</td>\n",
+       "      <th id=\"T_746f9_level0_row1\" class=\"row_heading level0 row1\" >Calcified</th>\n",
+       "      <td id=\"T_746f9_row1_col0\" class=\"data row1 col0\" >152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b4bde_level0_row2\" class=\"row_heading level0 row2\" >GroundGlassOpacity</th>\n",
-       "      <td id=\"T_b4bde_row2_col0\" class=\"data row2 col0\" >51</td>\n",
+       "      <th id=\"T_746f9_level0_row2\" class=\"row_heading level0 row2\" >GroundGlassOpacity</th>\n",
+       "      <td id=\"T_746f9_row2_col0\" class=\"data row2 col0\" >51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b4bde_level0_row3\" class=\"row_heading level0 row3\" >SemiSolid</th>\n",
-       "      <td id=\"T_b4bde_row3_col0\" class=\"data row3 col0\" >18</td>\n",
+       "      <th id=\"T_746f9_level0_row3\" class=\"row_heading level0 row3\" >SemiSolid</th>\n",
+       "      <td id=\"T_746f9_row3_col0\" class=\"data row3 col0\" >18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x19a201bb730>"
+       "<pandas.io.formats.style.Styler at 0x27338a23a90>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,11 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:55:02.382066Z",
-     "start_time": "2023-04-18T09:55:02.368057Z"
+     "end_time": "2023-05-12T14:17:28.668005Z",
+     "start_time": "2023-05-12T14:17:28.639904Z"
     }
    },
    "outputs": [
@@ -175,22 +181,22 @@
        "136 -263.880682     9.352996      Solid           0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_classification_labels[image_labels['noduleid'] == '2.25.10002343616245235850618787121539297713552472755036270141148']"
+    "train_classification_labels[train_classification_labels['noduleid'] == '2.25.10002343616245235850618787121539297713552472755036270141148']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:21:30.892373Z",
-     "start_time": "2023-04-18T09:21:30.876632Z"
+     "end_time": "2023-05-12T14:17:52.851587Z",
+     "start_time": "2023-05-12T14:17:52.841142Z"
     }
    },
    "outputs": [],
@@ -206,11 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:58:40.154797Z",
-     "start_time": "2023-04-18T09:58:40.122818Z"
+     "end_time": "2023-05-12T14:17:59.786063Z",
+     "start_time": "2023-05-12T14:17:59.740659Z"
     }
    },
    "outputs": [
@@ -218,10 +224,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image (0000019A2440D300)\n",
+      "Image (0000027342806BA0)\n",
       "  RTTI typeinfo:   class itk::Image<short,3>\n",
       "  Reference Count: 1\n",
-      "  Modified Time: 5864\n",
+      "  Modified Time: 2068\n",
       "  Debug: Off\n",
       "  Object Name: \n",
       "  Observers: \n",
@@ -231,8 +237,8 @@
       "  Release Data: Off\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
-      "  PipelineMTime: 5834\n",
-      "  UpdateMTime: 5860\n",
+      "  PipelineMTime: 2038\n",
+      "  UpdateMTime: 2064\n",
       "  RealTimeStamp: 0 seconds \n",
       "  LargestPossibleRegion: \n",
       "    Dimension: 3\n",
@@ -269,15 +275,15 @@
       "0 0 1\n",
       "\n",
       "  PixelContainer: \n",
-      "    ImportImageContainer (0000019A1866FFA0)\n",
+      "    ImportImageContainer (000002733F459F60)\n",
       "      RTTI typeinfo:   class itk::ImportImageContainer<unsigned __int64,short>\n",
       "      Reference Count: 1\n",
-      "      Modified Time: 5857\n",
+      "      Modified Time: 2061\n",
       "      Debug: Off\n",
       "      Object Name: \n",
       "      Observers: \n",
       "        none\n",
-      "      Pointer: 0000019A2E8BE040\n",
+      "      Pointer: 000002734B2AA040\n",
       "      Container manages memory: true\n",
       "      Size: 1048576\n",
       "      Capacity: 1048576\n",
@@ -286,17 +292,17 @@
     }
    ],
    "source": [
-    "image = sitk.ReadImage(\"train_set/images/2.25.10002343616245235850618787121539297713552472755036270141148.mha\")\n",
+    "image = sitk.ReadImage(\"data/train_set/images/2.25.10002343616245235850618787121539297713552472755036270141148.mha\")\n",
     "print(image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T09:58:41.166337Z",
-     "start_time": "2023-04-18T09:58:40.740947Z"
+     "end_time": "2023-05-12T14:19:19.863065Z",
+     "start_time": "2023-05-12T14:19:19.462835Z"
     }
    },
    "outputs": [
@@ -341,11 +347,34 @@
     "plt.imshow(sagittal, cmap='gray')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-12T14:19:24.757901Z",
+     "start_time": "2023-05-12T14:19:24.384839Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in C:\\Users\\Kieran/.cache\\torch\\hub\\mateuszbuda_brain-segmentation-pytorch_master\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = torch.hub.load('mateuszbuda/brain-segmentation-pytorch', 'unet',\n",
+    "    in_channels=3, out_channels=1, init_features=32, pretrained=True)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.9"
   },
   "varInspector": {
    "cols": {
@@ -380,6 +409,13 @@
      "library": "var_list.r",
      "varRefreshCmd": "cat(var_dic_list()) "
     }
+   },
+   "position": {
+    "height": "256.844px",
+    "left": "1579px",
+    "right": "20px",
+    "top": "120px",
+    "width": "321px"
    },
    "types_to_exclude": [
     "module",
