class imbalance oplossen poging 1

--- a/bodyct-luna23-ismi-trainer/train_class_imbalance.ipynb
+++ b/bodyct-luna23-ismi-trainer/train_class_imbalance.ipynb
@@ -98,8 +98,7 @@
     "            valid_pd = train_set[train_set.patientid.isin(valid_pids)]\n",
     "\n",
     "            # oversampling to tackle class imbalance\n",
-    "            # Strategry: oversample on nodule type\n",
-    "            oversample = SMOTE()\n",
+    "            # Strategry: oversample on nodule type, then oversample on malignancy\n",
     "\n",
     "            # resets the index so you don't have gaps between indices\n",
     "            train_pd = train_pd.reset_index(drop=True)\n",
