Worked on notebooks to visualise data and performance

--- a/ISMI project.ipynb
+++ b/ISMI project.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-12T14:17:01.349794Z",
-     "start_time": "2023-05-12T14:17:00.018178Z"
+     "end_time": "2023-06-02T14:05:47.504587Z",
+     "start_time": "2023-06-02T14:05:44.525784Z"
     }
    },
    "outputs": [],
@@ -26,15 +26,15 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-12T14:17:01.411111Z",
-     "start_time": "2023-05-12T14:17:01.383644Z"
+     "end_time": "2023-06-02T14:06:09.086578Z",
+     "start_time": "2023-06-02T14:06:09.021759Z"
     }
    },
    "outputs": [],
    "source": [
     "train_images = os.listdir('data/train_set/images')\n",
     "train_segmentation_labels = os.listdir('data/train_set/labels')\n",
-    "train_classification_labels = pd.read_csv('luna23-ismi-train-set.csv')\n",
+    "train_classification_labels = pd.read_csv('data/luna23-ismi-train-set.csv')\n",
     "test_images = os.listdir('data/test_set/images')"
    ]
   },
@@ -43,8 +43,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-12T14:17:25.113821Z",
-     "start_time": "2023-05-12T14:17:25.033029Z"
+     "end_time": "2023-06-02T14:06:20.532071Z",
+     "start_time": "2023-06-02T14:06:20.337275Z"
     },
     "scrolled": true
    },
@@ -53,52 +53,36 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_746f9_row0_col0 {\n",
+       "#T_8537f_row0_col0 {\n",
        "  background-color: #023858;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_746f9_row1_col0 {\n",
-       "  background-color: #c0c9e2;\n",
-       "  color: #000000;\n",
-       "}\n",
-       "#T_746f9_row2_col0 {\n",
-       "  background-color: #f4eef6;\n",
-       "  color: #000000;\n",
-       "}\n",
-       "#T_746f9_row3_col0 {\n",
+       "#T_8537f_row1_col0 {\n",
        "  background-color: #fff7fb;\n",
        "  color: #000000;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_746f9\">\n",
+       "<table id=\"T_8537f\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_746f9_level0_col0\" class=\"col_heading level0 col0\" >noduletype</th>\n",
+       "      <th id=\"T_8537f_level0_col0\" class=\"col_heading level0 col0\" >malignancy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_746f9_level0_row0\" class=\"row_heading level0 row0\" >Solid</th>\n",
-       "      <td id=\"T_746f9_row0_col0\" class=\"data row0 col0\" >466</td>\n",
+       "      <th id=\"T_8537f_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_8537f_row0_col0\" class=\"data row0 col0\" >475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_746f9_level0_row1\" class=\"row_heading level0 row1\" >Calcified</th>\n",
-       "      <td id=\"T_746f9_row1_col0\" class=\"data row1 col0\" >152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_746f9_level0_row2\" class=\"row_heading level0 row2\" >GroundGlassOpacity</th>\n",
-       "      <td id=\"T_746f9_row2_col0\" class=\"data row2 col0\" >51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_746f9_level0_row3\" class=\"row_heading level0 row3\" >SemiSolid</th>\n",
-       "      <td id=\"T_746f9_row3_col0\" class=\"data row3 col0\" >18</td>\n",
+       "      <th id=\"T_8537f_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_8537f_row1_col0\" class=\"data row1 col0\" >212</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x27338a23a90>"
+       "<pandas.io.formats.style.Styler at 0x283198fb3a0>"
       ]
      },
      "execution_count": 5,
@@ -107,8 +91,8 @@
     }
    ],
    "source": [
-    "train_classification_labels = pd.read_csv('luna23-ismi-train-set.csv')\n",
-    "train_classification_labels['noduletype'].value_counts().to_frame().style.background_gradient()"
+    "train_classification_labels = pd.read_csv('data/luna23-ismi-train-set.csv')\n",
+    "train_classification_labels['malignancy'].value_counts().to_frame().style.background_gradient()"
    ]
   },
   {
